chore: update package.json

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "./index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "ci": "npm i && npm run check && npm run build",
+    "dev": "vite --host 0.0.0.0",
+    "check": "vue-tsc",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
